Исправил замечания в ПР